syntax = "proto3";

package calculator;

option java_package = "br.com.amsj.proto.calculator";
option java_multiple_files = true;

message CalculatorAverageRequest {
  int32 number = 1;
}

message CalculatorAverageResponse {
  double average = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double squareRoot = 1;
}

service CalculatorService {
  rpc CalculatorAverage (stream CalculatorAverageRequest) returns (CalculatorAverageResponse){};

  // error handling
  // returns an error if a negative number is sent
  rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}
